--- a/my-app/src/components/HoverLink.scss
+++ b/my-app/src/components/HoverLink.scss
@@ -16,16 +16,9 @@
   }
 }
 
-.jla-link-hover-wrapper {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-direction: column;
-  background: #f1f1f1;
-}
 
 .jla-paragraph {
-  color: #616161;
+  color: #efefef;
   font-family: "brandon-grotesque", "Brandon Grotesque";
   font-size: 24px;
   padding: 20px;
@@ -178,8 +171,8 @@ $color-primary: #96e5df;
 // third paragraph link style
 .a3 {
   text-decoration: none;
-  color: #000;
-  box-shadow: inset 0 -2px 0 0 #000;
+  color: #efefef;
+  box-shadow: inset 0 -2px 0 0 #efefef;
   display: inline-block;
   transition: all .2s ease-in-out;
   padding: 0 3px;
@@ -187,8 +180,8 @@ $color-primary: #96e5df;
 
   &:hover {
     border: none;
-    box-shadow: inset 0 -25px 0 0 #000;
-    color: #FFF;
+    box-shadow: inset 0 -25px 0 0 #efefef;
+    color: #282c34;
   }
 }
 
