--- a/my-app/src/components/coolesLinks.scss
+++ b/my-app/src/components/coolesLinks.scss
@@ -1,7 +1,5 @@
 // coolest links
 .colored-links {
-  //display: flex;
-  //flex-direction: column;
   margin-top: 20px;
   padding: 50px;
   background-color: #000;
@@ -11,7 +9,7 @@
   @mixin bg-gradient($start-colour, $end-colour) {
     background-color: $start-colour;
     background-image: -webkit-gradient(linear, left top, right top, from($start-colour), to($end-colour));
-    background-image:         linear-gradient(left, $start-colour, $end-colour);
+    background-image:         linear-gradient(to left, $start-colour, $end-colour);
     filter:            progid:DXImageTransform.Microsoft.gradient(start-colourStr='#{$start-colour}', end-colourStr='#{$end-colour}', gradientType='1');
   }
 
@@ -20,7 +18,7 @@
     color: #fff;
     text-decoration: none;
     position: relative;
-    left: 200px;
+    //left: 200px;
     //text-align: center;
     font-size: 34px;
     z-index: 500;
@@ -84,8 +82,7 @@
       }
     }
     &:before {
-      z-index: -1;
-      height: 15px;
+      //height: 15px;
       width: 0%;
       background: rgba(212,228,239,1);
       @include bg-gradient(rgba(134,174,204,1), rgba(212,228,239,1));
