--- a/my-app/src/components/HoverLink.scss
+++ b/my-app/src/components/HoverLink.scss
@@ -3,6 +3,21 @@
 }
 *:focus { outline: none!important; }
 
+.jla-select {
+  background: transparent;
+  border: 2px solid #fff;
+  color: #fff;
+  padding: 20px;
+  margin-top: 20px;
+  text-transform: uppercase;
+
+  .jla-select-option {
+    color: #000;
+    text-transform: uppercase;
+    background: transparent;
+  }
+}
+
 // The micro clearfix
 // ------------------
 @mixin clearfix {
@@ -22,14 +37,14 @@
   font-family: "brandon-grotesque", "Brandon Grotesque";
   font-size: 24px;
   padding: 20px;
-  max-width: 600px;
-  line-height: 1.4;
+  max-width: 650px;
+  line-height: 1.6;
 }
 
 a {
   display: inline-block;
   position: relative;
-  color: #343434;
+  color: red;
   text-decoration: none;
   padding: 0 6px;
   &:before, &:after {
@@ -82,7 +97,7 @@ a {
 
 //second paragraph link style
 
-$color-primary: #96e5df;
+$color-primary: #67953b;
 
 @mixin inlineLinkHoverAnimation(
   $color: $color-primary,
@@ -180,7 +195,7 @@ $color-primary: #96e5df;
 
   &:hover {
     border: none;
-    box-shadow: inset 0 -25px 0 0 #efefef;
+    box-shadow: inset 0 -38px 0 0 #efefef;
     color: #282c34;
   }
 }
