--- a/my-app/src/components/HoverLink.scss
+++ b/my-app/src/components/HoverLink.scss
@@ -5,15 +5,15 @@
 
 .jla-select {
   background: transparent;
-  border: 2px solid #fff;
+  border: 2px solid #353434;
   cursor: pointer;
-  color: #fff;
+  color: #353434;
   padding: 20px;
   margin-top: 20px;
   text-transform: uppercase;
 
   .jla-select-option {
-    color: #000;
+    color: #353434;
     text-transform: uppercase;
     background: transparent;
   }
@@ -132,7 +132,7 @@ $color-primary: #67953b;
 // third paragraph link style
 .a3 {
   text-decoration: none;
-  color: #efefef;
+  color: #353434;
   box-shadow: inset 0 -2px 0 0 #efefef;
   display: inline-block;
   transition: all .2s ease-in-out;
@@ -156,17 +156,12 @@ $color-primary: #67953b;
 
   &:before {
     will-change: transform;
-    content: "";
-    background: red;
-    height: 100%;
-    width: 100%;
     display: block;
     position: absolute;
     z-index: -1;
-  }
-  &:before {
+    content: "";
     transition: 100ms ease-out 50ms;
-    transform-origin: 0 24px;
+    transform-origin: 0 45px;
     top: 0;
     left: 0;
     width: 100%;
@@ -176,6 +171,8 @@ $color-primary: #67953b;
   }
 
   &:hover {
+    color: #353434;
+
     &:before {
       transition: 100ms ease-out;
       transform: scaleY(.18);
@@ -183,5 +180,100 @@ $color-primary: #67953b;
     }
   }
 }
+
+// Option 5
+@mixin bg-gradient($start-colour, $end-colour) {
+  background-color: $start-colour;
+  background-image: -webkit-gradient(linear, to left top, right top, from($start-colour), to($end-colour));
+  background-image: -webkit-linear-gradient(to left, $start-colour, $end-colour);
+  background-image:         linear-gradient(to left, $start-colour, $end-colour);
+
+}
+
+.a5 {
+  text-decoration: none;
+  position: relative;
+  text-align: center;
+  font-size: 34px;
+  z-index: 500;
+  color: #aaa;
+  transition: color 300ms ease-in-out;
+
+  &.shrek {
+    &:before {
+      @include bg-gradient(#C5E1A5, #2E7D32);
+    }
+  }
+
+  &.codepen {
+    &:before {
+      @include bg-gradient(#E0E0E0, #757575);
+    }
+  }
+
+  &.twitter {
+    &:before {
+      @include bg-gradient(#fff, #2196F3);
+    }
+  }
+  &.instagram {
+    &:before {
+      @include bg-gradient(#C2185B, #FFA726);
+    }
+  }
+  &:hover {
+    color: #fff;
+
+    &:before {
+      width: 100%;
+    }
+  }
+
+  &:before {
+    z-index: -1;
+    height: 85%;
+    width: 0;
+    background: rgba(212,228,239,1);
+    @include bg-gradient(rgba(134,174,204,1), rgba(212,228,239,1));
+    content:"";
+    position: absolute;
+    bottom: 3px;
+    left: 0;
+    transition: all .4s cubic-bezier(0.7,0,0.3,1);
+  }
+}
+
+
+
+// Option 6 - cubic-bezier hover
+$link: #EC407A;
+
+.a6 {
+  position: relative;
+display: inline;
+  overflow: hidden;
+  text-decoration: none;
+  color: $link;
+  transform: translate(-50%,-50%);
+
+  &::after {
+    content: "";
+    background: rgba($link, 0.25);
+    position: absolute;
+    left: 20px;
+    bottom: -4px;
+    width: calc(100% - 20px);
+    height: calc(100% - 20px);
+    z-index: -1;
+    transition: 0.35s cubic-bezier(0.25, 0.1, 0, 2.05);
+  }
+  &:hover:after {
+    left: 0;
+    bottom: -2px;
+    width: 100%;
+    height: 100%;
+  }
+}
+
 
 
