--- a/my-app/src/font.scss
+++ b/my-app/src/font.scss
@@ -1,14 +1,14 @@
 @import url('https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300');
 
 h1 {
-  color: #efefef;
+  color: #353434;
   font-family: 'Open Sans Condensed', sans-serif;
   font-size: 50px;
 }
 
 .jla-paragraph {
   font-family: 'Open Sans Condensed', sans-serif;
-  color: #efefef;
+  color: #353434;
   font-size: 30px;
   line-height: 1.5;
   max-width: 650px;
