--- a/my-app/src/App.scss
+++ b/my-app/src/App.scss
@@ -1,23 +1,17 @@
 @import './font';
 
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .App-header {
   background-color: #fff;
   min-height: 100vh;
   display: flex;
+  max-width: 750px;
   flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
