--- a/my-app/src/components/HoverLink.scss
+++ b/my-app/src/components/HoverLink.scss
@@ -270,4 +270,24 @@ display: inline;
 }
 
 
+// Option 7: Font gradient
+.a7 {
+  background: linear-gradient(40deg, #fdf680 0%, #d6716d 50%, #a0fafb 100%);
+  background: linear-gradient(40deg, #6b6972 0%, #b8b8b8 50%, #65636c 100%);
+  background-size: cover;
+  background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  text-fill-color: transparent;
+  transition: background 200ms ease-in-out;
+
+  &:hover {
+    background: linear-gradient(40deg, #000000 0%, #7d7d7d 50%, #202020 100%);
+    background-size: cover;
+    background-clip: text;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    text-fill-color: transparent;
+  }
+}
 
